app/page.module.css
/* css code that encapsulates the whole homepage  */
.container{
    display:flex;
    flex-direction: column;
}

/* css code for adjusting how the navbar is displayed in this main page  */
.navbarContainer{
    width: 100%;
   
}

/* css code for banner section  */
.bannerContainer{
    height: 80vh;
    width: 100%;
    background-color: var(--banner-container-background-color);
    position: relative;
}

.banner{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    border-radius: 200px;
}
.contentContainer {
    width:40%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    /* background-color: rgb(214,219,220); */
    
}

.content{
    width: 80%;
    height: auto;
    padding-inline: 1.5rem;

    display: flex;
    flex-direction: column;
    justify-content: center;
    
    position: relative;
}

.greetTextBanner{
    font-size: 28px;
    font-weight: 700;
    color:var(--default-color);
}

.titleText{
    /* font-size: larger; */
    font-size: 24px;
    text-decoration: underline;
}

.descText{
    /* font-size: small;  */
    font-size: 17px;
    color: var(--default-color);
    width:300px;
    text-align: justify;
    font-weight: 400;
    font-family: cursive;
    
}



.boxContainer {
    width: 55%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    clip-path: polygon(20% 0%,100% 0%,100% 100%,0% 100%); 
}

.box {
    width: 100%;
    height: 100%;
    /* opacity: 0.8; */
    color: white;

    display: flex;
    justify-content: center;
    align-items: center;

    background-image: url('../public/sideImage.jpg');
    background-size: cover;
    
}


/* css code for project section */
.projectContainer{
    width:100%;
    height: auto;
    display: flex;
    flex-direction: column;
    gap: 3;
    margin-block: 2rem;

    position: relative;
}

.projectHeading{
    color: white;
    font-size: xx-large;
    width: 100%;
    align-items: center;
    text-align: center;
    padding: 5px;
    margin-bottom: 2rem;
    background-color: var(--default-color);
}

.project{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.projectList{
    border: 0.5px solid lightgray;
    box-shadow: 10px 10px 5px lightgray;
    /* padding: 1rem; */
    border-bottom-left-radius: 1rem;
    border-top-right-radius: 1rem;
    max-width: 25vw;
    height: 60vh;
}

.projectImage{
    height:200px;
    width: 100%;
    border-top-right-radius: 1rem;
    background-color: var(--default-color);
}

.projectTitle{
    font-weight: 600;
    text-align: center;
}

.projectDesc{
    color: gray;
    text-align: justify;
    padding: 0.5rem;
    font-size: 14px;
}

.lineClamp{
    display: -webkit-box;
    -webkit-box-orient: vertical;
    /* line-clamp: 3; */
    -webkit-line-clamp: 3;
    overflow: hidden;
}

.viewMore{
    /* position: absolute; */
    height: 1.8rem;
    padding-bottom: 5px;
    
}

.viewMore:hover{
    border-bottom: 2px solid var(--default-color);
    
}
.viewMoreButton{
    color:var(--default-color);
    font-size: large;
    padding:0.8rem;
}


/* css code for contact section */
.contactSection{
    width: 100%;
    height: 40vh;
    background-color: var(--default-color);
    display:flex;
    justify-content: center;
    align-items: center;
}
.button{
    color: white;
    border:2px solid white;
    padding: 0.8rem;
    font-weight: 600;
}

.button:hover{
    background-color: white;
    color:var(--default-color);
    
}

@media (max-width: 768px) { 

    .navbarContainer{
        width: 100%;
        /* height: 20vh; */
    }

    /* adjusting project list section for mobile-like screens */
    .project{
        display: flex;
        flex-direction: column;
        padding: 1rem;
    }

    .projectList{
        max-width: fit-content;
    }

    .banner{
        position: relative;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    /* adjusting banner for mobile-like screens */

    .contentContainer{
        position: relative;
        /* width: auto; */
        align-items: center;
        left: 1%;
        
    }

    .content{
        position: absolute;
        /* border: 2px solid red; */
        background-color: var(--white-color-transparent);
        min-width:350px;
        /* min-width: 20rem; */
        min-height: 180px;
        z-index: 10;
        border-radius: 1rem;
        overflow: hidden;
    }

    .greetTextBanner{
        position: absolute;
        top:0;
        color:var(--default-color-dark);
    }
    .titleText{
        color: var(--banner-title-text-color);
        position: absolute;
        top:17%;
        font-size: 21px;
    }
    .descText{
        position: absolute;
        top:35%;
        color: var(--default-color-dark);
        font-size: 16px;
        
    }
    .boxContainer{
        position: absolute;
        clip-path: none;
        width: 100%;
    }
 }

